<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10dp"
            android:padding="@dimen/_5dp">

            <ImageView
                android:id="@+id/image_details"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_200dp"
                android:layout_margin="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_8dp"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_detail"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_details" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/latitude"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_detail" />

            <TextView
                android:id="@+id/latitude_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/longitude"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude_detail" />

            <TextView
                android:id="@+id/longitude_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="@dimen/_10dp"
                android:background="@color/colorPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude_detail" />

            <TextView
                android:id="@+id/address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_10dp"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/address_detail" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:text="@string/ratings"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_detail" />

            <Button
                android:id="@+id/_navigate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/button_color"
                android:text="@string/navigate_to_maps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
